nav ui, tab bug behind overlay

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -25,7 +25,7 @@ body
 
 body.js-toggle-menu
 {
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr 85%;
   grid-template-areas: 
     'header nav'
     'main nav'
@@ -34,6 +34,26 @@ body.js-toggle-menu
     'header nav'
     'aside nav'
     'main nav'; */
+  overflow: hidden;
+}
+
+.skip-link
+{
+  position: absolute;
+  top: -50px;
+  width: 100%;
+  z-index: 2;
+  padding: var(--space-md);
+  background: var(--sorcery);
+  color: var(--clear);
+  transition: top 1s ease-out;
+}
+
+.skip-link:focus
+{
+  position: absolute;
+  top: 0;
+  transition: top .5s ease-in;
 }
 
 .page-header
@@ -57,7 +77,7 @@ body.js-toggle-menu
   height: var(--space-sm);
   background: var(--gradient-primary);
   background-size: 400% 400%;
-  z-index: 5;
+  z-index: 2;
   -webkit-animation: animatedGradient 10s linear infinite;
   -moz-animation: animatedGradient 10s linear infinite;
   -o-animation: animatedGradient 10s linear infinite;
@@ -66,7 +86,11 @@ body.js-toggle-menu
 
 .menu-toggle
 {
-  margin: var(--space-2x);
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: var(--space-4x);
+  z-index: 5;
 }
 
 .menu-close,
@@ -79,14 +103,29 @@ body.js-toggle-menu
 {
   width: 0;
   transition: width 1s ease-in-out;
+  z-index: 4;
 }
 
 .nav-on-canvas ul
 {
   margin: 0;
   padding: 0;
-  text-align: right;
+  /* text-align: right; */
 }
+
+.js-toggle-menu::before
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: var(--noir);
+  content: "";
+  opacity: 0.6;
+  z-index: 3;
+}
+
 
 .js-toggle-menu .menu-open
 {
@@ -104,23 +143,22 @@ body.js-toggle-menu
   width: 100%;
   height: 100%;
   display: flex;
-  border-left: 1px solid var(--noir);
+  /* border-left: 1px solid var(--noir); */
   padding: 0;
   /* background: var(--noir); */
-  /* background: var(--clear); */
-  background: var(--gradient-primary);
-  background-size: 400% 400%;
+  background: var(--clear);
+  /* background: var(--gradient-primary); */
+  /* background-size: 400% 400%; */
   overflow-y: auto;
 }
 
 .js-toggle-menu .nav-on-canvas ul
 {
   width: 100%;
-  display: grid;
+  display: flex;
   flex-direction: column;
-  justify-content: end;
-  align-items: center;
-  margin: var(--space-4x);
+  justify-content: center;
+  margin: 112px var(--space-4x) var(--space-4x);
 }
 
 .js-toggle-menu .nav-on-canvas ul li
@@ -135,10 +173,10 @@ body.js-toggle-menu
   border-bottom-width: var(--space-xs);
   border-bottom-style: solid;
   border-bottom-color: transparent;
-  color: var(--clear);
-  /* color: var(--noir); */
+  /* color: var(--clear); */
+  color: var(--noir);
   font-size: var(--fs-3);
-  font-weight: var(--font-weight-default);
+  font-weight: var(--font-weight-assertive);
   text-decoration: none;
 }
 
@@ -147,16 +185,19 @@ body.js-toggle-menu
 .nav-item:active,
 .nav-item.active
 {
-  /* border-color: var(--cupid); */
-  border-color: var(--clear);
-  color: var(--clear);
-  /* color: var(--noir); */
+  border-color: var(--noir);
+  background: var(--gradient-primary);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-decoration: none;
 }
 
-.nav-item:focus
+.nav-item:hover::selection,
+.nav-item:focus::selection,
+.nav-item:active::selection,
+.nav-item.active::selection
 {
-  outline-color: var(--cupid);
+  -webkit-text-fill-color: var(--clear);
 }
 
 .main-content
